reading blog items using ajax

--- a/apps/news/templates/news/index.html
+++ b/apps/news/templates/news/index.html
@@ -15,7 +15,7 @@
             {% if not posts or not posts.count() %}
                 Ничего нет
             {% else %}
-                <dl>
+                <dl id="log">
                     {% for post in posts %}
                         {% include 'news/post_box.html' %}
                     {% endfor %}
