--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -2,19 +2,31 @@
 
 # block scripts
 <script type="text/javascript">SyntaxHighlighter.all()</script>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
+  {lang: 'ru'}
+</script>
+<script type="text/javascript">
+function renderPlusone() {
+    gapi.plusone.render("plusone-div", { "size": "small" });
+}
+renderPlusone();
+</script>
 # endblock
 
 {% block content %}
     <div class="row-fluid">
         <div class="span9">
-            <h3>
-                <small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ post.created }}</span></small>
-            </h3>
             {% if content %}
                 {{ content|safe }}
             {% else %}
                 {{ post.short_text|safe }}
             {% endif %}
+            <div class="well well-small">
+                <h3>
+                    <small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ post.created }}</span></small>
+                    {% include 'bit/social.html' %}
+                </h3>
+            </div>
         </div>
         <div class="span3">
             <h4>
