--- a/templates/bit/footer.html
+++ b/templates/bit/footer.html
@@ -5,6 +5,6 @@
         | <a href="/_s/{{request.url.replace(request.host_url, '')}}" target="_blank">Смотреть в JSON</a>
       # endif
     </p>
-    <p class="muted">&copy; 2013 - Александр Егоров</p>
+    <p class="muted">&copy; 2002-2013 - Александр Егоров</p>
   </div>
 </div>
