--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -16,6 +16,7 @@ renderPlusone();
 {% block content %}
     <div class="row-fluid">
         <div class="span9">
+            {% include 'bit/big_banner.html' %}
             {% if content %}
                 {{ content|safe }}
             {% else %}
@@ -37,6 +38,7 @@ renderPlusone();
                     {% include 'news/post_box.html' %}
                 {% endfor %}
             </dl>
+        {% include 'bit/small_banner.html' %}
         </div>
     </div>
 {% endblock %}
