--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -37,8 +37,13 @@ renderPlusone();
                     {% include 'news/post_box.html' %}
                 {% endfor %}
             </dl>
-            {% include 'bit/more_posts.html' %}
-        {% include 'bit/small_banner.html' %}
+            <div class="span12">
+                {% include 'bit/more_posts.html' %}
+                <p/>
+            </div>
+            <div class="nav">
+                {% include 'bit/small_banner.html' %}
+            </div>
         </div>
     </div>
 {% endblock %}
