big banner added to the bottom of the blog page

--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -27,6 +27,7 @@ renderPlusone();
                     {% include 'bit/social.html' %}
                 </h3>
             </div>
+            {% include 'bit/big_banner.html' %}
         </div>
         <div class="span3">
             <h4>
