--- a/apps/portfolio/templates/portfolio/apache_document.html
+++ b/apps/portfolio/templates/portfolio/apache_document.html
@@ -4,9 +4,14 @@
 
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="span12">
+            <div class="span10">
                 <!--Body content-->
                 {{ html | safe }}
+            </div>
+            <div class="span2">
+                {% include 'bit/small_banner.html' %}
+                {% include 'bit/small_banner.html' %}
+                {% include 'bit/small_banner.html' %}
             </div>
         </div>
     </div>
