--- a/apps/news/admin/templates/news/admin/posts.html
+++ b/apps/news/admin/templates/news/admin/posts.html
@@ -1,13 +1,13 @@
 {% extends 'admin.html' %}
 
 {% block content %}
-    <h1 class="page-header">Новости</h1>
+    <h1 class="page-header">Блог</h1>
     <div class="row">
         <div class="span12">
             <a
                 class="btn hero-unit"
                 href="{{ url_for('admin.news.new_post') }}">
-                Добавить новость
+                Добавить пост
             </a>
         </div>
         <div class="span12">
