--- a/templates/admin/top_bar.html
+++ b/templates/admin/top_bar.html
@@ -20,7 +20,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="{{ url_for('admin.news.index') }}">Новости</a>
+                            <a href="{{ url_for('admin.news.index') }}">Блог</a>
                         </li>
                         <li>
                             <a href="{{ url_for('admin.file.index') }}">Файлы</a>
