--- a/apps/news/templates/news/index.html
+++ b/apps/news/templates/news/index.html
@@ -16,11 +16,58 @@
                 Ничего нет
             {% else %}
                 <dl>
-                    {% for post in posts %}
+                    {% for post in posts.object_list %}
                         {% include 'news/post_box.html' %}
                     {% endfor %}
                 </dl>
             {% endif %}
+        </div>
+        <ul class="pager">
+            {% if posts.has_previous %}
+                <li class="previous">
+                    <a href="{{ url_for(
+                                'news.index',
+                                page=posts.previous_page_number) }}"
+                       class="prev">
+                        &larr; новее
+                    </a>
+                </li>
+            {% else %}
+                <li class="disabled previous">
+                    <a href="#">&larr; новее</a>
+                </li>
+            {% endif %}
+
+            {% if posts.has_next %}
+                <li class="next">
+                    <a href="{{ url_for('news.index', page=posts.next_page_number) }}"
+                       class="next">старее &rarr;</a>
+                </li>
+            {% else %}
+                <li class="next disabled">
+                    <a href="#"
+                       class="next">старее &rarr;</a>
+                </li>
+            {% endif %}
+        </ul>
+        <div class="pagination">
+            <ul style="float: left;">
+                {% for page in posts.paginator.page_range %}
+                    {% if page %}
+                        {% if page == posts.number %}
+                            <li class="active">
+                                <a href="{{ url_for('news.index', page=page) }}" class="page">{{ page }}</a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{{ url_for('news.index', page=page) }}" class="page">{{ page }}</a>
+                            </li>
+                        {% endif %}
+                    {% else %}
+                        ......
+                    {% endif %}
+                {% endfor %}
+            </ul>
         </div>
     </div>
 {% endblock %}
