--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -24,7 +24,7 @@ renderPlusone();
             <div class="well well-small">
                 Теги:&nbsp;
                 {% for tag in post.tags %}
-                   <a href="{{ url_for('news.index') }}?tag={{ tag }}">{{ tag }}</a>
+                   <a href="{{ url_for('news.index') }}?tag={{ tag }}">{{ tag }}</a>,
                 {% endfor %}
             </div>
             <div class="well well-small">
