--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -21,12 +21,14 @@ renderPlusone();
             {% else %}
                 {{ post.short_text|safe }}
             {% endif %}
-            <div class="well well-small">
-                Теги:&nbsp;
-                {% for tag in post.tags %}
-                   <a href="{{ url_for('news.index') }}?tag={{ tag }}">{{ tag }}</a>,
-                {% endfor %}
-            </div>
+            {% if post.tags %}
+                <div class="well well-small">
+                    Теги:&nbsp;
+                    {% for tag in post.tags %}
+                       <a href="{{ url_for('news.index') }}?tag={{ tag }}">{{ tag }}</a>,
+                    {% endfor %}
+                </div>
+            {% endif %}
             <div class="well well-small">
                 <h3>
                     <small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ post.created }}</span></small>
