--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -25,7 +25,7 @@ renderPlusone();
                 <div class="well well-small">
                     Теги:&nbsp;
                     {% for tag in post.tags %}
-                       <a href="{{ url_for('news.index') }}?tag={{ tag }}">{{ tag }}</a>,
+                       <a href="{{ url_for('news.index') }}?tag={{ tag }}" class="btn">{{ tag }}</a>
                     {% endfor %}
                 </div>
             {% endif %}
