tags cloud implemented

--- a/apps/news/templates/news/index.html
+++ b/apps/news/templates/news/index.html
@@ -11,7 +11,7 @@
             сами.</p>
     </div>
     <div class="row-fluid">
-        <div class="span12">
+        <div class="span9">
             {% if not posts %}
                 Ничего нет
             {% else %}
@@ -21,58 +21,71 @@
                     {% endfor %}
                 </dl>
             {% endif %}
-        </div>
-        {% if "tag" in request.args %}
-            {% set tag_query = "?tag=" + request.args["tag"] %}
-        {% else %}
-            {% set tag_query = "" %}
-        {% endif %}
-        <ul class="pager">
-            {% if posts.has_previous %}
-                <li class="previous">
-                    <a href="{{ url_for(
+
+            {% if "tag" in request.args %}
+                {% set tag_query = "?tag=" + request.args["tag"] %}
+            {% else %}
+                {% set tag_query = "" %}
+            {% endif %}
+            <ul class="pager">
+                {% if posts.has_previous %}
+                    <li class="previous">
+                        <a href="{{ url_for(
                                 'news.index',
                                 page=posts.previous_page_number) }}{{ tag_query }}"
-                       class="prev">
-                        &larr; новее
-                    </a>
-                </li>
-            {% else %}
-                <li class="disabled previous">
-                    <a href="#">&larr; новее</a>
-                </li>
-            {% endif %}
+                           class="prev">
+                            &larr; новее
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="disabled previous">
+                        <a href="#">&larr; новее</a>
+                    </li>
+                {% endif %}
 
-            {% if posts.has_next %}
-                <li class="next">
-                    <a href="{{ url_for('news.index', page=posts.next_page_number) }}{{ tag_query }}"
-                       class="next">старее &rarr;</a>
-                </li>
-            {% else %}
-                <li class="next disabled">
-                    <a href="#"
-                       class="next">старее &rarr;</a>
-                </li>
-            {% endif %}
-        </ul>
-        <div class="pagination">
-            <ul style="float: left;">
-                {% for page in posts.paginator.page_range %}
-                    {% if page %}
-                        {% if page == posts.number %}
-                            <li class="active">
-                                <a href="{{ url_for('news.index', page=page) }}{{ tag_query }}" class="page">{{ page }}</a>
-                            </li>
-                        {% else %}
-                            <li>
-                                <a href="{{ url_for('news.index', page=page) }}{{ tag_query }}" class="page">{{ page }}</a>
-                            </li>
-                        {% endif %}
-                    {% else %}
-                        ......
-                    {% endif %}
-                {% endfor %}
+                {% if posts.has_next %}
+                    <li class="next">
+                        <a href="{{ url_for('news.index', page=posts.next_page_number) }}{{ tag_query }}"
+                           class="next">старее &rarr;</a>
+                    </li>
+                {% else %}
+                    <li class="next disabled">
+                        <a href="#"
+                           class="next">старее &rarr;</a>
+                    </li>
+                {% endif %}
             </ul>
+            <div class="pagination">
+                <ul style="float: left;">
+                    {% for page in posts.paginator.page_range %}
+                        {% if page %}
+                            {% if page == posts.number %}
+                                <li class="active">
+                                    <a href="{{ url_for('news.index', page=page) }}{{ tag_query }}"
+                                       class="page">{{ page }}</a>
+                                </li>
+                            {% else %}
+                                <li>
+                                    <a href="{{ url_for('news.index', page=page) }}{{ tag_query }}"
+                                       class="page">{{ page }}</a>
+                                </li>
+                            {% endif %}
+                        {% else %}
+                            ......
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+        <div class="span3 tags">
+        <h3>Метки</h3>
+            {% if not tags %}
+                <p>Ничего нет</p>
+            {% else %}
+                {% for tag in tags %}
+                    <a href="{{ url_for('news.index') }}?tag={{ tag.title }}" class={{tag.tag_level}}>{{ tag.title }}</a>
+                {% endfor %}
+            {% endif %}
         </div>
     </div>
 {% endblock %}
