removed date output for apache docs - it doesn't work correctly in GAE

--- a/apps/portfolio/templates/portfolio/apache_documents_list.html
+++ b/apps/portfolio/templates/portfolio/apache_documents_list.html
@@ -1,7 +1,7 @@
 {% if apache_docs %}
 <dl>
     {% for item in apache_docs %}
-        <dt><small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ item['modified']}}</span></small>&nbsp;<a href="{{ url_for('portfolio.index') }}{{ item['doc'] }}.html">{{ item['title'] }}</a></dt>
+        <dt><a href="{{ url_for('portfolio.index') }}{{ item['doc'] }}.html">{{ item['title'] }}</a></dt>
         <dd>{{ item['descr'] }}</dd>
     {% endfor %}
 </dl>
