Tags title corrected More posts button style set to block to fill whole column

--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -23,7 +23,7 @@ renderPlusone();
             {% endif %}
             {% if post.tags %}
                 <div class="well well-small">
-                    Теги:&nbsp;
+                    Метки:&nbsp;
                     {% for tag in post.tags %}
                        <a href="{{ url_for('news.index') }}?tag={{ tag }}" class="btn">{{ tag }}</a>
                     {% endfor %}
