Revert "using prettify for code highlighting"
This reverts commit ce4a5b40d6c89f80ca9cf7a75d2148fac858894a.

--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 # block scripts
-
+<script type="text/javascript">SyntaxHighlighter.all()</script>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
   {lang: 'ru'}
 </script>
@@ -12,7 +12,6 @@ function renderPlusone() {
 renderPlusone();
 </script>
 # endblock
-
 
 {% block content %}
     <div class="row-fluid">
