syntaxhighlighter scroller bug in Chrome fixed

--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -13,6 +13,12 @@ renderPlusone();
 </script>
 # endblock
 
+# block head
+<style type="text/css">
+.syntaxhighlighter { overflow-y: hidden !important; }
+</style>
+# endblock
+
 {% block content %}
     <div class="row-fluid">
         <div class="span9">
