--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 # block scripts
-<script type="text/javascript">SyntaxHighlighter.all()</script>
+<script type="text/javascript">
+    SyntaxHighlighter.defaults['toolbar'] = false;
+    SyntaxHighlighter.all();
+</script>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
   {lang: 'ru'}
 </script>
