--- a/apps/news/templates/news/index.html
+++ b/apps/news/templates/news/index.html
@@ -94,13 +94,26 @@
             {% if not archieve %}
                 <p>Ничего нет</p>
             {% else %}
-                {% for year in archieve %}
-                    <h4>{{ year }}</h4>
-                    {% for month in archieve[year] %}
-                        <a href="{{ url_for('news.index') }}?year={{ year }}&month={{ month[0] }}"
-                           >{{ month[0] }} ({{ month[1] }})</a><br/>
-                     {% endfor %}
-                {% endfor %}
+                <div class="accordion" id="accordion2">
+                    {% for year in archieve | sort(reverse=True) %}
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse{{ year }}">
+                                    {{ year }}
+                                </a>
+                            </div>
+                            <div id="collapse{{ year }}" class="accordion-body collapse in">
+                                <div class="accordion-inner">
+                                {% for month in archieve[year] %}
+                                    <a href="{{ url_for('news.index') }}?year={{ year }}&month={{ month[0] }}"
+                                            >{{ months[month[0]] }} ({{ month[1] }})</a><br/>
+                                {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
             {% endif %}
         </div>
     </div>
