--- a/apps/news/templates/news/post_box.html
+++ b/apps/news/templates/news/post_box.html
@@ -1,2 +1,8 @@
-    <dt><small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ post.created }}</span></small>&nbsp;<a href="{{ url_for('news.post', key_id=post.key.id()) }}">{{ post.title }}</a></dt>
+    <dt><small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ post.created }}</span></small>&nbsp;
+        {% if main_post and main_post.key.id() == post.key.id() %}
+            <span>{{ post.title }}</span>
+        {% else %}
+            <a href="{{ url_for('news.post', key_id=post.key.id()) }}">{{ post.title }}</a>
+        {% endif %}
+    </dt>
     <dd>{{ post.short_text|safe }}</dd>
