--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -48,6 +48,9 @@ renderPlusone();
             <script type="text/javascript">
                 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
                 var disqus_shortname = 'egoroffspbru'; // required: replace example with your forum shortname
+                var disqus_identifier = '{{ main_post.key.id() }}';
+                var disqus_title = '{{ title }}';
+                var disqus_url = '{{ full_uri }}';
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
