--- a/apps/portfolio/templates/portfolio/index.html
+++ b/apps/portfolio/templates/portfolio/index.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="hero-unit">
-        <h1>{{ title }}</h1>
-
-        <p>Софт, код, документация и прочие полезности.</p>
+    <div class="page-header">
+        <h1>
+            {{ title }}
+            <small>
+                софт, код, документация и прочие полезности.
+            </small>
+        </h1>
     </div>
     <div class="row-fluid">
         <div class="span6">
