--- a/static/src/less/tags.less
+++ b/static/src/less/tags.less
@@ -3,7 +3,11 @@
   margin: 10px auto 30px;
   padding: 20px;
   line-height: 1.6em;
-  a {
+  span {
+    font-weight: bold;
+    font-style: italic;
+  }
+  a, span {
     position: relative;
     top: 0px;
     left: -10px;
@@ -14,47 +18,47 @@
     font-size: 1em;
     text-decoration: none;
   }
-  a.tagRank1 {
+  a.tagRank1, span.tagRank1 {
     font-size: 2.8em;
   }
-  a.tagRank2 {
+  a.tagRank2, span.tagRank2 {
     font-size: 2.6em;
     color: #222;
   }
-  a.tagRank3 {
+  a.tagRank3, span.tagRank3 {
     font-size: 2.4em;
     color: #333;
   }
 
-  a.tagRank4 {
+  a.tagRank4, span.tagRank4 {
     font-size: 2.2em;
     color: #444;
   }
 
-  a.tagRank5 {
+  a.tagRank5, span.tagRank5 {
     font-size: 2em;
     color: #555;
   }
 
-  a.tagRank6 {
+  a.tagRank6, span.tagRank6 {
     font-size: 1.8em;
     color: #666;
   }
-  a.tagRank7 {
+  a.tagRank7, span.tagRank7 {
     font-size: 1.6em;
     color: #777;
   }
-  a.tagRank8 {
+  a.tagRank8, span.tagRank8 {
     font-size: 1.4em;
     color: #888;
   }
 
-  a.tagRank9 {
+  a.tagRank9, span.tagRank9 {
     font-size: 1.2em;
     color: #999;
   }
 
-  a.tagRank10 {
+  a.tagRank10, span.tagRank10 {
     font-size: 1em;
     color: #AAA;
   }
